fix(ui): fix width for containers with collapsed sidebar

--- a/src/app/test-management/test-management.component.css
+++ b/src/app/test-management/test-management.component.css
@@ -1,5 +1,5 @@
 .content-area {
-    width: calc(100vw - 240px);
+    width: 100%;
     height: calc(100vh - 60px);
 }
 
